--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,6 @@ exclude = '''
 
 [tool.isort]
 known_first_party = ["app"]
-known_third_party = ["alembic", "bs4", "client", "colorutils", "config", "flask", "flask_migrate", "flask_sqlalchemy", "sqlalchemy"]
+known_third_party = ["alembic", "attr", "bs4", "client", "colorutils", "config", "flask", "flask_migrate", "flask_sqlalchemy", "sqlalchemy"]
 multi_line_output = 3
 include_trailing_comma = true
