adding app config options

--- a/.ebextensions/app.config
+++ b/.ebextensions/app.config
@@ -5,3 +5,9 @@ option_settings:
     - namespace: aws:ec2:instances
       option_name: InstanceTypes
       value: t2.micro
+    - namesspace: aws:autoscaling:asg
+      option_name: MinSize
+      value: 1
+    - namespace: aws:autoscaling:asg
+      option_name: MaxSize
+      value: 1
