fixing typo in app config

--- a/.ebextensions/app.config
+++ b/.ebextensions/app.config
@@ -5,7 +5,7 @@ option_settings:
     - namespace: aws:ec2:instances
       option_name: InstanceTypes
       value: t2.micro
-    - namesspace: aws:autoscaling:asg
+    - namespace: aws:autoscaling:asg
       option_name: MinSize
       value: 1
     - namespace: aws:autoscaling:asg
