--- a/.ebextensions/app.config
+++ b/.ebextensions/app.config
@@ -5,9 +5,9 @@ option_settings:
     - namespace: aws:ec2:instances
       option_name: InstanceTypes
       value: t2.micro
-    - namespace: aws:autoscaling:asg
-      option_name: MinSize
+    - namespace: aws:autoscaling:updatepolicy:rollingupdate
+      option_name: MinInstancesInService
       value: 1
-    - namespace: aws:autoscaling:asg
-      option_name: MaxSize
+    - namespace: aws:autoscaling:updatepolicy:rollingupdate
+      option_name: MaxInstancesInService
       value: 1
