updaing db config

--- a/.ebextensions/db.config
+++ b/.ebextensions/db.config
@@ -8,7 +8,7 @@ Resources:
       AWS::CloudFormation::Authentication:
         S3Auth:
           type: "s3"
-          buckets: ["DOC-EXAMPLE-BUCKET-123456789012"]
+          buckets: ["kook-tracker-secrets"]
           roleName: "aws-elasticbeanstalk-ec2-role"
 
 files:
