switching s3 bucket url

--- a/.ebextensions/db.config
+++ b/.ebextensions/db.config
@@ -17,4 +17,4 @@ files:
     owner: root
     group: root
     authentication: "S3Auth"
-    source: https://s3-us-west-2.amazonaws.com/kook-tracker-secrets/connection.json
+    source: https://kook-tracker-secrets.s3.us-west-1.amazonaws.com/connection.json
