adding security group

--- a/.ebextensions/app.config
+++ b/.ebextensions/app.config
@@ -5,3 +5,6 @@ option_settings:
     - namespace: aws:ec2:instances
       option_name: InstanceTypes
       value: t2.micro
+    - namespace: aws:autoscaling:launchconfiguration
+      option_name: SecurityGroups
+      value: sg-94ac29ef
