--- a/.ebextensions/app.config
+++ b/.ebextensions/app.config
@@ -7,4 +7,4 @@ option_settings:
       value: t2.micro
     - namespace: aws:autoscaling:launchconfiguration
       option_name: SecurityGroups
-      value: sg-94ac29ef
+      value: default
