--- a/.dockerignore
+++ b/.dockerignore
@@ -1,1 +1,12 @@
 *.db
+.flake8
+pyproject.toml
+README.md
+LICENSE
+requirements.txt
+.pre-commit-config.yaml
+.gitignore
+.ebextensions
+.elasticbeanstalk
+.github
+.git
