--- a/.ebextensions/db.config
+++ b/.ebextensions/db.config
@@ -1,20 +1,4 @@
 option_settings:
-  aws:elasticbeanstalk:application:environment:
-    DB_CONNECTION_FILE: /tmp/connection.json
-
-Resources:
-  AWSEBAutoScalingGroup:
-    Metadata:
-      AWS::CloudFormation::Authentication:
-        S3Auth:
-          type: "s3"
-          buckets: ["kook-tracker-secrets"]
-          roleName: "aws-elasticbeanstalk-ec2-role"
-
-files:
-  "/tmp/connection.json" :
-    mode: "000644"
-    owner: root
-    group: root
-    authentication: "S3Auth"
-    source: https://kook-tracker-secrets.s3.us-west-1.amazonaws.com/connection.json
+  aws:rds:dbinstance:
+    DBEngine: postrges
+    DBAllocatedStorage: 5
