changing db version again

--- a/.ebextensions/app.config
+++ b/.ebextensions/app.config
@@ -4,7 +4,7 @@ option_settings:
       value: SingleInstance
     - namespace: aws:ec2:instances
       option_name: InstanceTypes
-      value: t2.micro
+      value: db.t2.micro
     - namespace: aws:autoscaling:launchconfiguration
       option_name: SecurityGroups
       value: default
