--- a/.ebextensions/db.config
+++ b/.ebextensions/db.config
@@ -1,5 +1,5 @@
 option_settings:
   aws:rds:dbinstance:
     DBEngine: postgres
-    DBEngineVersion: 13.20
+    DBEngineVersion: '13.20'
     DBAllocatedStorage: 5
